docs: add create new user endpoint
